--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,9 @@ jobs:
       with:
         go-version: '^1.16.0'
     - name: Install dependencies
-      run: go get -u golang.org/x/lint/golint
+      run: |
+        go get -u golang.org/x/lint/golint
+        make vendor
     - name: Run vet & lint & fmt
       run: |
         make vet
